--- a/kiss/kissalbums.html
+++ b/kiss/kissalbums.html
@@ -46,7 +46,7 @@
 						<figcaption class="trasera">
 							<h2 class="titulo">Kiss</h2>
 							<hr>
-							<p>Lovegun<br><br>1977</p>
+							<p>Love Gun<br><br>1977</p>
 						</figcaption>
 				</figure>
 			</a>	
