--- a/kiss/dynasty.html
+++ b/kiss/dynasty.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Dynasty</h2>
       <p>Año: 1979</p>
-      <a href="#" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/4hD_4JlWRRoGSLzrvlYulg" target="_bank">Descargar</a>
     </div>
       </div>
 
