--- a/kiss/lovegun.html
+++ b/kiss/lovegun.html
@@ -34,9 +34,9 @@
 
     <div class="content">
       <div class="textBox">
-      <h2>Lovegun</h2>
+      <h2>Love Gun</h2>
       <p>Año: 1977</p>
-      <a href="#" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/NFeDYkC1ufIndPen0I1pDQ" target="_bank">Descargar</a>
     </div>
       </div>
 
