--- a/magodeoz/iradei.html
+++ b/magodeoz/iradei.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Ira Dei</h2>
       <p>Año: 2019</p>
-      <a href="#" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/p0rTRr7TZcDGwJSPhSvObg" target="_bank">Descargar</a>
     </div>
       </div>
 
