--- a/magodeoz/laciudaddelosarboles.html
+++ b/magodeoz/laciudaddelosarboles.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>La Ciudad De Los Àrboles</h2>
       <p>Año: 2007</p>
-      <a href="https://download1073.mediafire.com/lvtqdcz1aoqg/nzley5rd6tnomim/M%C3%A4go+De+Oz+-+La+Ciudad+De+Los+%C3%81rboles.zip" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/f5AtzEM_wMxW6TYdqCP7Vg" target="_bank">Descargar</a>
     </div>
       </div>
 
