--- a/metallica/albumsmetallica.html
+++ b/metallica/albumsmetallica.html
@@ -147,6 +147,42 @@
 				</figure>
 			</a>	
 		</div>
+		<div class="contenedor_tarjeta">
+			<a href="garageinc.html">
+				<figure>
+					<img src="../img/metallica/garageinc1998.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">Metallica</h2>
+							<hr>
+							<p>Garage<br><br>Inc<br><br>1998</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
+			<a href="beyondmagnetic.html">
+				<figure>
+					<img src="../img/metallica/beyondmagnetic2011.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">Metallica</h2>
+							<hr>
+							<p>Beyond<br><br>Magnetic<br><br>2011</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
+			<a href="killemall.html">
+				<figure>
+					<img src="../img/metallica/killemall1983.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">Metallica</h2>
+							<hr>
+							<p>Kill <br><br>'Em <br><br>All<br><br>1983</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
 </section>
 
 </body>
