--- a/metallica/killemall.html
+++ b/metallica/killemall.html
@@ -4,8 +4,8 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="icon" href="../img/metallica/load1996.jpeg" type="image/png">
-     <link rel="stylesheet" href="load.css">
+     <link rel="icon" href="../img/metallica/killemall1983.jpg" type="image/png">
+     <link rel="stylesheet" href="killemall.css">
 
      <!-- icons -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,13 +14,13 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
 
-     
+
      <title>Metallica</title>
 </head>
 <body>
 
   <section>
-    <img src="../img/metallica/load1996.jpeg" class="win">
+    <img src="../img/metallica/killemall1983.jpg" class="win">
     <header>
       <a href="../index.html" class="logo">SOD</a>
       <ul class="navigation">
@@ -34,9 +34,9 @@
 
     <div class="content">
       <div class="textBox">
-      <h2>Load</h2>
-      <p>Año: 1996</p>
-      <a href="https://cloud.degoo.com/share/0cjrLDdukwIl9bc6EZwRNg" target="_bank">Descargar</a>
+      <h2>Kill 'Em All</h2>
+      <p>Año: 1983</p>
+      <a href="https://cloud.degoo.com/share/StVHHoOCN1s0L_AJPyzT3A" target="_bank">Descargar</a>
     </div>
       </div>
 
