--- a/pantera/albumspantera.html
+++ b/pantera/albumspantera.html
@@ -65,7 +65,7 @@
 				</figure>
 			</a>	
 		</div>
-<!--		<div class="contenedor_tarjeta">
+		<div class="contenedor_tarjeta">
 			<a href="iamthenight.html">
 				<figure>
 					<img src="../img/pantera/iamthenight.jpg" class="frontal" alt="">
@@ -112,11 +112,8 @@
 						</figcaption>
 				</figure>
 			</a>	
-    </div> -->
-
-
-	
-		<div class="contenedor_tarjeta">
+    </div>
+	<div class="contenedor_tarjeta">
 			<a href="reinventingthesteel.html">
 				<figure>
 					<img src="../img/pantera/reinventingthesteel.jpg" class="frontal" alt="">
