--- a/magodeoz/banderanegra.html
+++ b/magodeoz/banderanegra.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Bandera Negra</h2>
       <p>Año: 2021</p>
-      <a href="#" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/BnFdCrNuOu2Bk-30vrimGg" target="_bank">Descargar</a>
     </div>
       </div>
 
