--- a/magodeoz/finisterra.html
+++ b/magodeoz/finisterra.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Finisterra</h2>
       <p>Año: 2000</p>
-      <a href="https://download853.mediafire.com/46e6k2okvwcg/6y66psus3cdqadm/M%C3%A4go+de+Oz+-+Finisterra.zip" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/hhx-t4PMZtgDkzwECms_EA" target="_bank">Descargar</a>
     </div>
       </div>
 
