--- a/magodeoz/gaia1.html
+++ b/magodeoz/gaia1.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Gaia I</h2>
       <p>Año: 2003</p>
-      <a href="https://download1979.mediafire.com/ywswminmqf6g/pyjwy3xu04qqhoi/M%C3%A4go+de+Oz+-+Gaia.zip" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/IZ4m9_mwtfKtBu9cNHDCEg" target="_bank">Descargar</a>
     </div>
       </div>
 
