--- a/magodeoz/gaia2lavozdormida.html
+++ b/magodeoz/gaia2lavozdormida.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Gaia II La Voz Dormida</h2>
       <p>Año: 2005</p>
-      <a href="https://download1979.mediafire.com/epi3vim63ffg/xb9jomxietk5zlf/M%C3%A4go+de+Oz+-+Gaia+II.zip" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/5qna7glJnofxNj5lX-CRBA" target="_bank">Descargar</a>
     </div>
       </div>
 
