--- a/magodeoz/gaia3atlantia.html
+++ b/magodeoz/gaia3atlantia.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Gaia III Atlantia</h2>
       <p>Año: 2010</p>
-      <a href="https://download1476.mediafire.com/lhkco9cvtpcg/2yzp5ja3w0960vb/M%C3%A4go+de+Oz+-+Gaia+III+Atlantia.zip" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/od3BfCilQPbgLXtxQnFo6g" target="_bank">Descargar</a>
     </div>
       </div>
 
