--- a/magodeoz/hechizospocimasybrujeria.html
+++ b/magodeoz/hechizospocimasybrujeria.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Hechizos, Pocimas Y Brujeria</h2>
       <p>Año: 2012</p>
-      <a href="https://download943.mediafire.com/54llem4zd2og/dzip5hi9c1xoenj/M%C3%A4go+de+Oz+-+Hechizos%2C+p%C3%B3cimas+y+brujer%C3%ADa.zip" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/9595obTW_4X8EptqAXCxNA" target="_bank">Descargar</a>
     </div>
       </div>
 
