--- a/magodeoz/ilusiana.html
+++ b/magodeoz/ilusiana.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Ilusiana</h2>
       <p>Año: 2014</p>
-      <a href="https://download1321.mediafire.com/egut3hi48ylg/gbc31s18t1kgjen/M%C3%A4go+de+Oz+-+Ilussia.zip" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/oOnfNqzSlPm6wZTneRDgrA" target="_bank">Descargar</a>
     </div>
       </div>
 
