--- a/magodeoz/laleyendadelamancha.html
+++ b/magodeoz/laleyendadelamancha.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>La Leyenda De La Mancha</h2>
       <p>Año: 1998</p>
-      <a href="https://download1075.mediafire.com/th3t97c6pcbg/cq63ggnhebhttj2/M%C3%A4go+de+Oz+-+La+Leyenda+De+La+Mancha.zip" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/qPHw88fM9PFfivoRywIYjw" target="_bank">Descargar</a>
     </div>
       </div>
 
