--- a/metallica/andjusticeforall.html
+++ b/metallica/andjusticeforall.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>..And Justice For All</h2>
       <p>Año: 1998</p>
-      <a href="#" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/UHvhLsGoNkG6VpKR6JL65w" target="_bank">Descargar</a>
     </div>
       </div>
 
