--- a/metallica/deathmagnetic.html
+++ b/metallica/deathmagnetic.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Death Magnetic</h2>
       <p>Año: 2008</p>
-      <a href="#" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/B6LvQp4XuTDCavXXuWE3tg" target="_bank">Descargar</a>
     </div>
       </div>
 
