--- a/metallica/masterofpuppets.html
+++ b/metallica/masterofpuppets.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Master Of Puppets</h2>
       <p>Año: 1986</p>
-      <a href="https://download1593.mediafire.com/xiwbmfbhrtxg/o7hboo10g7ok7sy/Metallica+-+Master+Of+Puppets.zip" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/EqDNgO6Ax-EkfSKviGVsng" target="_bank">Descargar</a>
     </div>
       </div>
 
