--- a/metallica/reload.html
+++ b/metallica/reload.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Reload</h2>
       <p>Año: 1997</p>
-      <a href="#" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/I5LMhW1KTuCgTIj3A5BVYw" target="_bank">Descargar</a>
     </div>
       </div>
 
