--- a/metallica/ridethelightning.html
+++ b/metallica/ridethelightning.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Ride The Lightning</h2>
       <p>Año: 1984</p>
-      <a href="https://download1076.mediafire.com/oc6wd16k4irg/kej4psmlyzzcj7d/Metallica+-+Ride+The+Lightning.zip" target="_bank">Descargar</a>
+      <a href="https://cloud.degoo.com/share/oxTenwuFMd5NuOOfcFJRtg" target="_bank">Descargar</a>
     </div>
       </div>
 
