--- a/aeternus/beyondthewanderingmoon.html
+++ b/aeternus/beyondthewanderingmoon.html
@@ -35,7 +35,7 @@
       <div class="textBox">
       <h2>Beyond The Wandering Moon</h2>
       <p>Año: 1997</p>
-      <a href="https://cloud.degoo.com/share/vR_0vNOrMfS-9Xp-ovoy6g" target="_bank">Descargar</a>
+      <a href="https://download1514.mediafire.com/s7nkfcmvisvg/n6rt1ysmmgdseon/Beyond+the+Wandering+Moon.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
