--- a/amonamarth/berserker.html
+++ b/amonamarth/berserker.html
@@ -35,7 +35,7 @@
       <div class="textBox">
       <h2>Berserker</h2>
       <p>Año: 2019</p>
-      <a href="https://cloud.degoo.com/share/YREzWAqg-iSxSxNtZJmX2Q" target="_bank">Descargar</a>
+      <a href="https://download1335.mediafire.com/o8aau17vxpdg/oy0f1saxq7iejlf/Berserker.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
