--- a/amonamarth/deceiverofthegods.html
+++ b/amonamarth/deceiverofthegods.html
@@ -35,7 +35,7 @@
       <div class="textBox">
       <h2>Deceiver Of The Gods</h2>
       <p>Año: 2013</p>
-      <a href="https://cloud.degoo.com/share/5aOdhuHLGKDD6H1CgipOuA" target="_bank">Descargar</a>
+      <a href="https://download844.mediafire.com/6eg7krt3mgag/fbrgu4d3s2x7wl4/Deceiver+of+the+Gods.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
