--- a/amonamarth/theavenger.html
+++ b/amonamarth/theavenger.html
@@ -35,7 +35,7 @@
       <div class="textBox">
       <h2>The Avenger</h2>
       <p>Año: 1999</p>
-      <a href="https://cloud.degoo.com/share/QYgt0rXY5trSQihQHJ8gzg" target="_bank">Descargar</a>
+      <a href="https://download1580.mediafire.com/vixor4t4mmbg/gfqidlxr3z8rmth/The+Avenger.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
