--- a/amonamarth/twilightofthethundergod.html
+++ b/amonamarth/twilightofthethundergod.html
@@ -35,7 +35,7 @@
       <div class="textBox">
       <h2>Twilight Of The Thunder God</h2>
       <p>Año: 2008</p>
-      <a href="https://cloud.degoo.com/share/URQ_Pef7zU5tHD4dEBbw8g" target="_bank">Descargar</a>
+      <a href="https://download1587.mediafire.com/1nqnoakt008g/c41kj4krui873a0/Twilight+Of+The+Thunder+God.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
