--- a/apocalyptica/7thsymphony.html
+++ b/apocalyptica/7thsymphony.html
@@ -35,7 +35,7 @@
       <div class="textBox">
       <h2>7th Symphonic</h2>
       <p>Año: 2010</p>
-      <a href="https://cloud.degoo.com/share/ESyG4LkvenBge4rAF3v9Dw" target="_bank">Descargar</a>
+      <a href="https://download1079.mediafire.com/w360dl0my6bg/bcpzzhntkouhe4p/7th+Symphony.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
