--- a/apocalyptica/apocalyptica1.html
+++ b/apocalyptica/apocalyptica1.html
@@ -35,7 +35,7 @@
       <div class="textBox">
       <h2>Apocalyptica</h2>
       <p>Año: 2005</p>
-      <a href="https://cloud.degoo.com/share/_HqBltG6-7RqcUBmPvUiTg" target="_bank">Descargar</a>
+      <a href="https://download1505.mediafire.com/2ydt57uge1hg/pd96vovduc8gu6g/Apocalyptica.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
