--- a/apocalyptica/cult.html
+++ b/apocalyptica/cult.html
@@ -35,7 +35,7 @@
       <div class="textBox">
       <h2>Cult</h2>
       <p>Año: 2000</p>
-      <a href="https://cloud.degoo.com/share/O7wvNPV95X_7LizwCyLwRg" target="_bank">Descargar</a>
+      <a href="https://download1508.mediafire.com/3x7x1suw03fg/1slwrekfw0n16xq/Cult.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
