--- a/archenemy/anthemsofrebellion.html
+++ b/archenemy/anthemsofrebellion.html
@@ -35,7 +35,7 @@
       <div class="textBox">
       <h2>Anthems Of Rebellion</h2>
       <p>Año: 2003</p>
-      <a href="https://cloud.degoo.com/share/-e8f9qIACuypinH1AfQMfg" target="_bank">Descargar</a>
+      <a href="https://download1509.mediafire.com/ydaqnxaoxwbg/8v168ds03sne5o2/AnthemsOfRebelion.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
