--- a/archenemy/doomsdaymachine.html
+++ b/archenemy/doomsdaymachine.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Doomsday Macchine</h2>
       <p>Año: 2005</p>
-      <a href="https://cloud.degoo.com/share/o7IkzKkHilmI52qCtW-ITw" target="_bank">Descargar</a>
+      <a href="https://download1080.mediafire.com/n7xwarcumrhg/1xa7oiinl6v9ye0/DoomsdayMachine.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
