--- a/archenemy/khaoslegions.html
+++ b/archenemy/khaoslegions.html
@@ -35,7 +35,7 @@
       <div class="textBox">
       <h2>Khaos Legions</h2>
       <p>Año: 2011</p>
-      <a href="https://cloud.degoo.com/share/Y5IkcNY_ghavg8t71lZYSg" target="_bank">Descargar</a>
+      <a href="https://download1475.mediafire.com/7lihiq99xijg/ya8x6h16uja2n3x/KhaosLegions.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
