--- a/archenemy/riseofthetyrant.html
+++ b/archenemy/riseofthetyrant.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Rise Of The Tyrant</h2>
       <p>Año: 2007</p>
-      <a href="https://cloud.degoo.com/share/vQCFuwexsmYFH5iopinhmQ" target="_bank">Descargar</a>
+      <a href="https://download944.mediafire.com/3l9v0k4f5qcg/7wxzb524lfprspb/RiseOfTheTyrant.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
