--- a/archenemy/stigmata.html
+++ b/archenemy/stigmata.html
@@ -35,7 +35,7 @@
       <div class="textBox">
       <h2>Stigmata</h2>
       <p>Año: 1998</p>
-      <a href="https://cloud.degoo.com/share/6jutT0itTb2W-T-IE8tzpw" target="_bank">Descargar</a>
+      <a href="#" target="_bank">Descargar</a>
     </div>
       </div>
 
