--- a/archenemy/wagesofsin.html
+++ b/archenemy/wagesofsin.html
@@ -38,7 +38,7 @@
       <div class="textBox">
       <h2>Wages Of Sin</h2>
       <p>Año: 2001</p>
-      <a href="https://cloud.degoo.com/share/m2_cpthW1AmWSQWTbD701g" target="_bank">Descargar</a>
+      <a href="https://download1518.mediafire.com/fub0zj0l2slg/uim7jyf3kje3quq/WagesOfSin.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
