--- a/archenemy/wareternal.html
+++ b/archenemy/wareternal.html
@@ -37,7 +37,7 @@
       <div class="textBox">
       <h2>War Eternal</h2>
       <p>Año: 2014</p>
-      <a href="https://cloud.degoo.com/share/Uh6pbiHV-IDHVoHChBMxqg" target="_bank">Descargar</a>
+      <a href="https://download1489.mediafire.com/g4mmz4b3fyeg/bu7crs72x12gbnt/WarEternal.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
