--- a/archenemy/willtopower.html
+++ b/archenemy/willtopower.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Will To Power</h2>
       <p>Año: 2017</p>
-      <a href="https://cloud.degoo.com/share/1_94UbsZ-6FOhagHKOUFwA" target="_bank">Descargar</a>
+      <a href="https://download1498.mediafire.com/uoa5drv9jlqg/2v8uhbu7g1shxvm/WilToPower.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
