--- a/askingalexandria/standupandscream.html
+++ b/askingalexandria/standupandscream.html
@@ -35,7 +35,7 @@
       <div class="textBox">
       <h2>Stand Up And Scream</h2>
       <p>Año: 2009</p>
-      <a href="https://cloud.degoo.com/share/MQhbFyYK5CrwEq2rdeeUNw" target="_bank">Descargar</a>
+      <a href="https://download1084.mediafire.com/jlqk1znv2g2g/grdo9pkw1xgh0vz/Stand+Up+And+Scream.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
