--- a/augustburnsred/constellations.html
+++ b/augustburnsred/constellations.html
@@ -35,7 +35,7 @@
       <div class="textBox">
       <h2>Constellations</h2>
       <p>Año: 2009</p>
-      <a href="https://cloud.degoo.com/share/rVLmM1rKEJ9cV1D433_BJQ" target="_bank">Descargar</a>
+      <a href="https://download938.mediafire.com/n3oqmxjzr2ig/ht3fo72jy91e83o/Constellations.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
