--- a/blacksabbath/blacksabbath1.html
+++ b/blacksabbath/blacksabbath1.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Black Sabbath</h2>
       <p>Año: 1970</p>
-      <a href="https://cloud.degoo.com/share/I-AgIaydu-42Le3NFqAilA" target="_bank">Descargar</a>
+      <a href="https://download853.mediafire.com/m34w3jvb9v3g/0thfop7j28m30lf/Black+Sabbath.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
