--- a/blacksabbath/bornagain.html
+++ b/blacksabbath/bornagain.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Born Again</h2>
       <p>Año: 1983</p>
-      <a href="https://cloud.degoo.com/share/Ny9gFZ5jQOvXQqi8jN4-Rw" target="_bank">Descargar</a>
+      <a href="https://download1319.mediafire.com/kqyrd6wcs1og/vg5swb59q07quf4/Born+Again.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
