--- a/blacksabbath/heavenandhell.html
+++ b/blacksabbath/heavenandhell.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Heaven And Hell</h2>
       <p>Año: 1980</p>
-      <a href="https://cloud.degoo.com/share/-uOArhnoe7snP8tykVP_-w" target="_bank">Descargar</a>
+      <a href="https://download1074.mediafire.com/jwz527tgk5fg/zo3jifyd6ij2h5a/Heaven+And+Hell.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
