--- a/blacksabbath/neversaydie.html
+++ b/blacksabbath/neversaydie.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Never Say Die!</h2>
       <p>Año: 1978</p>
-      <a href="https://cloud.degoo.com/share/pAiW3oveaaWvab0OuDxhdw" target="_bank">Descargar</a>
+      <a href="https://download1323.mediafire.com/i4mah5je6u9g/75m3mmdyescevbm/Never+Say+Die.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
