--- a/blacksabbath/paranoid.html
+++ b/blacksabbath/paranoid.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Paranoid</h2>
       <p>Año: 1970</p>
-      <a href="https://cloud.degoo.com/share/tNbhXMVUeFopxHOhgvQqiw" target="_bank">Descargar</a>
+      <a href="https://download1489.mediafire.com/95n6cb7zmzkg/icuc2l4wuzbxmko/Paranoid.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
