--- a/septicflesh/albumssepticflesh.html
+++ b/septicflesh/albumssepticflesh.html
@@ -39,7 +39,7 @@
 	</div>
 
 	<section class="contenedor">	
-		<div class="contenedor_tarjeta">
+		<!-- <div class="contenedor_tarjeta">
 			<a href="afallentemple.html">
 				<figure>
 					<img src="../img/septicflesh/afallentemple1.jpg" class="frontal" alt="">
@@ -50,7 +50,7 @@
 						</figcaption>
 				</figure>
 			</a>	
-		</div>
+		</div> -->
 		<div class="contenedor_tarjeta">
 			<a href="codexomega.html">
 				<figure>
@@ -87,7 +87,7 @@
 				</figure>
 			</a>	
 		</div>
-		<div class="contenedor_tarjeta">
+		<!-- <div class="contenedor_tarjeta">
 			<a href="revolutiondna.html">
 				<figure>
 					<img src="../img/septicflesh/revolutiondna1999.jpg" class="frontal" alt="">
@@ -98,7 +98,7 @@
 						</figcaption>
 				</figure>
 			</a>	
-		</div>
+		</div> -->
 		<div class="contenedor_tarjeta">
 			<a href="thegreatmass.html">
 				<figure>
@@ -147,7 +147,7 @@
 				</figure>
 			</a>	
 		</div>
-		<div class="contenedor_tarjeta">
+		<!-- <div class="contenedor_tarjeta">
 			<a href="esoptron.html">
 				<figure>
 					<img src="../img/septicflesh/esoptron1995.jpg" class="frontal" alt="">
@@ -158,7 +158,7 @@
 						</figcaption>
 				</figure>
 			</a>	
-		</div>
+		</div> -->
 </section>
 
 </body>
