--- a/bands.html
+++ b/bands.html
@@ -446,7 +446,7 @@
 				</figure>
 			</a>	
 		</div>
-		<div class="contenedor_tarjeta">
+		<!-- <div class="contenedor_tarjeta">
 			<a href="sirenia/sirenia.html">
 				<figure>
 					<img src="img/sirenia/sirenia.jpg" class="frontal" alt="">
@@ -505,7 +505,7 @@
 						</figcaption>
 				</figure>
 			</a>	
-		</div>
+		</div> -->
 	</section>
 
 </body>
