--- a/index.html
+++ b/index.html
@@ -87,6 +87,32 @@
 			</div>
 		</figure>
 	</div>
+	<div class="contenedor">
+		<figure>
+			<img src="img/childrenofbodom/2013haloofblood.jpg" alt="">
+			<div class="capa">
+				<h3>Children Of Bodom</h3>
+				<p>Halo Of Blood</p> <br>
+				<a href="childrenofbodom/haloofblood.html">Ir Al Álbum</a>
+			</div>
+		</figure>
+		<figure>
+			<img src="img/avengedsevenfold/2007avengedsevenfold.jpg" alt="">
+			<div class="capa">
+				<h3>Avenged Sevenfold</h3>
+				<p>Avenged Sevenfold</p> <br>
+				<a href="avengedsevenfold/avengedsevenfold.html">Ir Al Álbum</a>
+			</div>
+		</figure>
+		<figure>
+			<img src="img/muse/2009theresistance.jpg" alt="">
+			<div class="capa">
+				<h3>Muse</h3>
+				<p>The Resistance</p> <br>
+				<a href="muse/theresistence.html">Ir Al Álbum</a>
+			</div>
+		</figure>
+	</div>
 	</body>
 <footer>
 	<p>Esta es una página para poder compartir los hoy en dia y siempre nuestros oidos necesitaron la
