--- a/index.html
+++ b/index.html
@@ -89,27 +89,27 @@
 	</div>
 	<div class="contenedor">
 		<figure>
-			<img src="img/childrenofbodom/2013haloofblood.jpg" alt="">
+			<img src="img/ironmaiden/thefinalfrontier2010.jpg" alt="">
 			<div class="capa">
-				<h3>Children Of Bodom</h3>
-				<p>Halo Of Blood</p> <br>
-				<a href="childrenofbodom/haloofblood.html">Ir Al Álbum</a>
+				<h3>Iron Maiden</h3>
+				<p>The Final Frontier</p> <br>
+				<a href="ironmaiden/thefinalfrontier.html">Ir Al Álbum</a>
 			</div>
 		</figure>
 		<figure>
-			<img src="img/avengedsevenfold/2007avengedsevenfold.jpg" alt="">
+			<img src="img/judaspriest/1988ramitdown.jpg" alt="">
 			<div class="capa">
-				<h3>Avenged Sevenfold</h3>
-				<p>Avenged Sevenfold</p> <br>
-				<a href="avengedsevenfold/avengedsevenfold.html">Ir Al Álbum</a>
+				<h3>Judas Priest</h3>
+				<p>Ram It Down</p> <br>
+				<a href="judaspriest/ramitdown.html">Ir Al Álbum</a>
 			</div>
 		</figure>
 		<figure>
-			<img src="img/muse/2009theresistance.jpg" alt="">
+			<img src="img/magodeoz/gaia3atlantia2010.jpg" alt="">
 			<div class="capa">
-				<h3>Muse</h3>
-				<p>The Resistance</p> <br>
-				<a href="muse/theresistence.html">Ir Al Álbum</a>
+				<h3>Mägo De Oz</h3>
+				<p>Gaia III Atlantia</p> <br>
+				<a href="magodeoz/gaia3atlantia.html">Ir Al Álbum</a>
 			</div>
 		</figure>
 	</div>
