--- a/vision.html
+++ b/vision.html
@@ -30,57 +30,14 @@
 	<title>Secret Of Death</title>
 </head>
 <body>
+<div class="imagenes">
+	<img src="img/detodo/accesodenegado.gif" alt="">
+</div>
 
-
-<div class="contexto">
-		<h1>Nuestra Vision</h1>
-	</div>
-
-		<div class="main">
-			<div class="slides">
-				<section>
-					<img src="img1/1.jpg" alt="">
-					<p>Nuestro sueño es estar en boca de todos<br> y tambien compartir nuestros gustos<br> con todo el mundo.</p>
-				</section>
-				<section>
-					<img src="img1/2.jpg" alt="">
-					<p>Apoyamos a que ellas personas <br>las cuales quieren adentrarse a este mundo llamado Rock & Metal.</p>
-				</section>
-				<section>
-				<img src="img1/3.jpg" alt="">
-				<p>Sabemos perfectamente que muchas personas quieren<br> Música offline ya sean en sus celulares, Computadoras.</p>
-				</section>
-		</div>
-		<script src="jquery-1.9.1.min.js"></script>
-			<script src="jquery.slides.js"></script>
-				<script>
-
-					$(function(){
-						$(".slides").slidesjs({
-							play: {
-								active: true,
-								effect: "slides",
-								interval: 5000,
-								auto: true,
-								swap: true,
-								pauseOnHover: false,
-								restarDelay: 2500
-							}
-						});
-					});
-
-				</script>
-			</div>
 </body>
-
-
-<footer>
-	<p>No queremos ser mejores que otros, queremos ser mejores que nosotros mismos.</p>
-</footer>
 <div class="derechos">
    	<p>
    		todos los derecho reservados 2021 SODHDR&M
    	</p>
-   </div>
-   <script src="../SecretsOfDeath.github.io/script.js"></script>
+</div>
 </html>
