--- a/cradleoffilth/albumscradleoffilth.html
+++ b/cradleoffilth/albumscradleoffilth.html
@@ -40,6 +40,18 @@
 
 	<section class="contenedor">	
 		<div class="contenedor_tarjeta">
+			<a href="existenceisfutile.html">
+				<figure>
+					<img src="../img/cradleoffilth/existenceisfutile2021.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">Cradle Of Filth</h2>
+							<hr>
+							<p>Existence<br><br>Is<br><br>Futile<br><br> 2021</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
 			<a href="bittersuitestosucubi.html">
 				<figure>
 					<img src="../img/cradleoffilth/bittersuitestosuccubi2001.jpg" class="frontal" alt="">
