--- a/dreamtheater/albumsdreamtheater.html
+++ b/dreamtheater/albumsdreamtheater.html
@@ -40,6 +40,18 @@
 
 	<section class="contenedor">	
 		<div class="contenedor_tarjeta">
+			<a href="aviewfromthetopoftheworld.html">
+				<figure>
+					<img src="../img/dreamtheater/aviewfromthetopoftheworld2021.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">Dream Theater</h2>
+							<hr>
+							<p>A <br><br>View<br><br>From <br><br>top <br><br>of<br><br> the<br><br> World<br><br> 2021</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
 			<a href="adramaticturnofevents.html">
 				<figure>
 					<img src="../img/dreamtheater/adramaticturnofevents2011.jpg" class="frontal" alt="">
