--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
 	<div class="contenedor">
 		<figure>
-			<img src="img/thebeatles/1970letitbe.jpg" alt="">
+			<img src="img/cradleoffilth/existenceisfutile2021.jpg" alt="">
 			<div class="capa">
-				<h3>The Beatles</h3>
-				<p>Let It Be</p> <br>
-				<a href="thebeatles/letitbe.html">Ir Al Álbum</a>
+				<h3>Cradle Of Filth</h3>
+				<p>Existence Is Futile</p> <br>
+				<a href="cradleoffilth/existenceisfutile.html">Ir Al Álbum</a>
 			</div>
 		</figure>
 		<figure>
@@ -63,11 +63,11 @@
 	</div>
 	<div class="contenedor">
 		<figure>
-			<img src="img/childrenofbodom/2013haloofblood.jpg" alt="">
+			<img src="img/dreamtheater/aviewfromthetopoftheworld2021.jpg" alt="">
 			<div class="capa">
-				<h3>Children Of Bodom</h3>
-				<p>Halo Of Blood</p> <br>
-				<a href="childrenofbodom/haloofblood.html">Ir Al Álbum</a>
+				<h3>Dream Theater</h3>
+				<p>A View From the top of the World</p> <br>
+				<a href="dreamtheater/aviewfromthetopoftheworld.html">Ir Al Álbum</a>
 			</div>
 		</figure>
 		<figure>
