--- a/acdc/acdc.html
+++ b/acdc/acdc.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
 
-     <title>AC/CD</title>
+     <title>ACϟCD</title>
 </head>
 <body>
 
@@ -33,7 +33,7 @@
       <!-- Bonton de albums y concierto -->
     <div class="content">
       <div class="textBox">
-      <h2>AC/DC</h2>
+      <h2>ACϟDC</h2>
       <p>Año: 1973<br> País: Australia<br>Integrantes: Angus Young (guitarrista) <br> Stevie Young (guitarrista) <br> Brian Johnson (vocalista) <br> Cliff Williams (bajo) <br> Phil Rudd (bateria)</p>
       <a href="albums.html">Álbums</a>
     </div>
