--- a/acdc/albums.html
+++ b/acdc/albums.html
@@ -44,7 +44,7 @@
 				<figure>
 					<img src="../img/acdc/flyonthewall.jpg" class="frontal" alt="">
 						<figcaption class="trasera">
-							<h2 class="titulo">AC/DC</h2>
+							<h2 class="titulo">ACϟDC</h2>
 							<hr>
 							<p>Fly <br><br> On <br><br> The <br><br> Wall<br><br> 1985</p>
 						</figcaption>
