--- a/bands.html
+++ b/bands.html
@@ -10,10 +10,13 @@
 	<link rel="icon" href="img/detodo/iconsod.jpg" type="image/png">
 	<link rel="stylesheet" type="text/css" href="estilo2.css">
 
-  <!--Fonts-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet"> 
+
+	<!-- icons -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<!--Fonts-->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet"> 
 
 	<title>Secret Of Death</title>
 
@@ -36,7 +39,13 @@
 		<h1>Bandas</h1>
 	</div>
 
-
+	<!-- <div class="caja">
+		<div class="caja_chica">
+			<span class="icon"><i class="fa fa-search" aria-hidden="true"></i></span>
+				<input type="search" id="search" placeholder="Buscar">
+		</div>
+	</div> -->
+	
 	<section class="contenedor">
 
 		<div class="contenedor_tarjeta">
@@ -44,9 +53,9 @@
 				<figure>
 					<img src="img/acdc/acdc.jpg" class="frontal" alt="">
 						<figcaption class="trasera">
-							<h2 class="titulo">AC/DC</h2>
+							<h2 class="titulo">ACϟDC</h2>
 							<hr>
-							<p>AC/DC es una banda de hard rock británica-australiana, formada en 1973 en Australia por los hermanos escoceses Malcolm y Angus Young.</p>
+							<p>ACϟDC es una banda de hard rock británica-australiana, formada en 1973 en Australia por los hermanos escoceses Malcolm y Angus Young.</p>
 						</figcaption>
 				</figure>
 			</a>	
