--- a/redesociales.html
+++ b/redesociales.html
@@ -29,12 +29,17 @@
     <ul class="sci">
       <div class="facebook1">
       <li data-text="Facebook" data-color="#1877f2">
-        <a href="" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        <a href="https://www.facebook.com/SecretsOfDeathMx" class="facebook" target="-bank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
       </li>
     </div>
     <div class="twitter1">
       <li data-text="Twitter" data-color="#0099ff">
-        <a href="" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/SecretOfDeath1" class="twitter" target="-bank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+      </li>
+    </div>
+    <div class="patreon1">
+      <li data-text="Patreon" data-color="#FF5C50">
+        <a href="https://www.patreon.com/secretsofdeathmx" class="patreon" target="-bank"><img src="patreon.png"></a>
       </li>
     </div>
     </ul>
