--- a/acdc/flyonthewall.html
+++ b/acdc/flyonthewall.html
@@ -14,7 +14,7 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
 
-     <title>AC/DC</title>
+     <title>ACϟDC</title>
 </head>
 <body>
 
