--- a/amonamarth/concierto.html
+++ b/amonamarth/concierto.html
@@ -5,15 +5,15 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="icon" href="../img/amonamarth/logo.png" type="image/png">
-     <link rel="stylesheet" href="amonamarth.css">
+    <link rel="stylesheet" href="../amonamarth/concierto.css">
 
-
-    <!-- icons -->
+     <!--Icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
+    <!--Fonts-->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
+
 
      <title>Amon Amarth</title>
 </head>
@@ -30,20 +30,18 @@
       </ul>
     </header>
 
-      <!-- Bonton de albums y concierto -->
+
     <div class="content">
       <div class="textBox">
-      <h2>Amon Amarth</h2>
-      <p>Año: 1992<br> País: Suecia<br>Integrantes: Johan Hegg (Vocalista),<br>Johan Söderberg  (guitarra), <br> Olavi Mikkonen (guitarra), <br> Ted Lundström (bajo), <br> Jocke Wallgren (batería).</p>
-      <a href="albums.html">Álbums</a>
-      <a href="concierto.html">Concierto</a>
+      <h2>Live Wacken</h2>
+      <p>Año: 2017</p>
+      <a href="https://download1641.mediafire.com/u93qzjwgeimg/ms0cyglangnplqj/AMON+AMARTH+LIVE+AT+WACKEN+2017++Full+Concert.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
-      <!-- Botones Redes -->
 <ul class="sci">
-  <li><a href="https://www.facebook.com/SecretsOfDeathMx" target="-bank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-  <li><a href="https://twitter.com/SecretOfDeath1" target="-bank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+     <li><a href="https://www.facebook.com/SecretsOfDeathMx" target="-bank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+     <li><a href="https://twitter.com/SecretOfDeath1" target="-bank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
    </ul>
 </section>
 </body>
