--- a/childrenofbodom/childrenofbodom.html
+++ b/childrenofbodom/childrenofbodom.html
@@ -37,6 +37,7 @@
       <h2>Children Of Bodom</h2>
       <p>Año:1997 <br> País:Filandia  <br>Alexi Laiho(Voz Principal), <br>Jaska Raatikainen(Batería), <br>Janne Viljami Wirman(Teclado), <br>Daniel Freyberg(Guitarra).</p>
       <a href="childrenofbodomalbums.html">Álbums</a>
+      <a href="concierto.html">Concierto</a>
     </div>
       </div>
 
