--- a/dreamtheater/dreams.html
+++ b/dreamtheater/dreams.html
@@ -37,6 +37,7 @@
       <h2>Dream Theater</h2>
       <p>Año: 1985<br> País: Estados Unidos<br>Integrantes: James LaBrie (Vocalista), <br> John Petrucci (Guitarra), <br> Mike Mangini (Bateria), <br> John Myung (Bajo).</p>
       <a href="albumsdreamtheater.html">Álbums</a>
+      <a href="concierto.html">Concierto</a>
     </div>
       </div>
 
