--- a/sirenia/albumssirenia.html
+++ b/sirenia/albumssirenia.html
@@ -45,7 +45,7 @@
 						<figcaption class="trasera">
 							<h2 class="titulo">Sirenia</h2>
 							<hr>
-							<p>Anelixir <br><br>For <br><br>Exitence<br><br> 2004</p>
+							<p>An <br><br>Elixir <br><br>For <br><br>Exitence<br><br> 2004</p>
 						</figcaption>
 				</figure>
 			</a>	
