--- a/septicflesh/septicflesh.html
+++ b/septicflesh/septicflesh.html
@@ -26,7 +26,7 @@
       <ul class="navigation">
         <li><a  href="../index.html">Casa</a></li>
         <li><a class="active" href="../bands.html">Bandas</a></li>
-        <li><a href="../news.html">Noticias</a></li>
+        <!-- <li><a href="../news.html">Noticias</a></li> -->
         <li><a href="../vision.html">Vision</a></li>
       </ul>
     </header>
