--- a/sirenia/dimdaysofdolor.html
+++ b/sirenia/dimdaysofdolor.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Dimdays Of Dolor</h2>
       <p>Año: 2016</p>
-      <a href="#" target="_bank">Descargar</a>
+      <a href="https://download947.mediafire.com/qomu85kgjocg/t3qbnbj4nxd619n/Dim+Days+Of+Dolor.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
