--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 			</div>
 		</figure>
 		<figure>
-			<img src="img/therasmus/2008blackroses.jpg" alt="">
+			<img src="img/stratovarius/destiny.jpg" alt="">
 			<div class="capa">
-				<h3>The Rasmus</h3>
-				<p>Black Roses</p> <br>
-				<a href="therasmus/blackroses.html">Ir Al Álbum</a>
+				<h3>Stratovarius</h3>
+				<p>Destiny</p> <br>
+				<a href="stratovarius/destiny.html">Ir Al Álbum</a>
 			</div>
 		</figure>
 		<figure>
