--- a/stratovarius/destiny.html
+++ b/stratovarius/destiny.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Destiny</h2>
       <p>Año: 1998</p>
-      <a href="https://cloud.degoo.com/share/4fjm4TSkVmYCEgbkuOfahw" target="_bank">Descargar</a>
+      <a href="https://download1495.mediafire.com/sl7ie6w7uqlg/jiwz3odjj0qvmfr/Destiny.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
