--- a/stratovarius/dreamspace.html
+++ b/stratovarius/dreamspace.html
@@ -37,7 +37,7 @@
       <div class="textBox">
       <h2>Dreamspace</h2>
       <p>Año: 1994</p>
-      <a href="https://cloud.degoo.com/share/QDf1y1XYjqDj-GiiXXjTKQ" target="_bank">Descargar</a>
+      <a href="https://download1472.mediafire.com/qlksdqzol9xg/8vl7pvphkx8popl/Dreamspace.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
