--- a/stratovarius/elementspart1.html
+++ b/stratovarius/elementspart1.html
@@ -38,7 +38,7 @@
       <div class="textBox">
       <h2>Elements Part 1</h2>
       <p>Año: 2003</p>
-      <a href="https://cloud.degoo.com/share/jG9vjxJ0WRFw3OxZUYgeRQ" target="_bank">Descargar</a>
+      <a href="https://download1337.mediafire.com/wddtr5krg0fg/rizsh087nba2ci1/Elements+Part+1.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
