--- a/stratovarius/elementspart2.html
+++ b/stratovarius/elementspart2.html
@@ -38,7 +38,7 @@
       <div class="textBox">
       <h2>Elements Part 2</h2>
       <p>Año: 2003</p>
-      <a href="https://cloud.degoo.com/share/yag9_YMde9xFE3-SffJ3qQ" target="_bank">Descargar</a>
+      <a href="https://download843.mediafire.com/1p9td6ha3tjg/qurc7qty8sm0uza/Elements+Part+2.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
