--- a/stratovarius/elysium.html
+++ b/stratovarius/elysium.html
@@ -39,7 +39,7 @@
       <div class="textBox">
       <h2>Elysium</h2>
       <p>Año: 2011</p>
-      <a href="https://cloud.degoo.com/share/moy1yDz_tZNnvcsnCHyYbg" target="_bank">Descargar</a>
+      <a href="https://download1510.mediafire.com/itpqd0dkxkwg/k79wlupuoe7e9no/Elysium.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
