--- a/stratovarius/episode.html
+++ b/stratovarius/episode.html
@@ -38,7 +38,7 @@
       <div class="textBox">
       <h2>Episode</h2>
       <p>Año: 1996</p>
-      <a href="https://cloud.degoo.com/share/cmH3_O6uWso66T-F1x-k3g" target="_bank">Descargar</a>
+      <a href="https://download1648.mediafire.com/yhfrpoyexxdg/19n2ccwu8ms7mfh/Episode.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
