--- a/stratovarius/eternal.html
+++ b/stratovarius/eternal.html
@@ -37,7 +37,7 @@
       <div class="textBox">
       <h2>Eternal</h2>
       <p>Año: 2015</p>
-      <a href="https://cloud.degoo.com/share/YUFbkYMZEwzVzamsA_lF2Q" target="_bank">Descargar</a>
+      <a href="https://download1327.mediafire.com/qtbp0u0c2cag/dlnsk95kxpns3pz/Eternal.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
