--- a/stratovarius/infinite.html
+++ b/stratovarius/infinite.html
@@ -37,7 +37,7 @@
       <div class="textBox">
       <h2>Infinite</h2>
       <p>Año: 2000</p>
-      <a href="https://cloud.degoo.com/share/o59-r6i4XbyH6DBNJuLm1Q" target="_bank">Descargar</a>
+      <a href="https://download1515.mediafire.com/qwbarn1f3pag/pkgzpqy4sfqigtk/Infinite.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
