--- a/stratovarius/nemesis.html
+++ b/stratovarius/nemesis.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Nemesis</h2>
       <p>Año: 2013</p>
-      <a href="https://cloud.degoo.com/share/87cssVUz1etK7b3neFiWyQ" target="_bank">Descargar</a>
+      <a href="https://download1499.mediafire.com/f02g1py8t1ag/4mv0esohccgq6jr/Nemesis.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
