--- a/tierrasanta/sangredereyes.html
+++ b/tierrasanta/sangredereyes.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Caminos De Fuego</h2>
       <p>Año: 2010</p>
-      <a href="#" target="_bank">Descargar</a>
+      <a href="https://download853.mediafire.com/t0tmcbmqt25g/tjmdxsn97pzqhd1/Sangre+de+Reyes.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
