--- a/thebeatles/letitbe.html
+++ b/thebeatles/letitbe.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Let It Be</h2>
       <p>Año: 1970</p>
-      <a href="#" target="_bank">Descargar</a>
+      <a href="https://download1581.mediafire.com/bybrwuksc2ug/3s32cq8nypulyvd/Let+It+Be.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
