--- a/thebeatles/rubbersoul.html
+++ b/thebeatles/rubbersoul.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
 
     
-     <title>Judas Priest</title>
+     <title>The Beatles</title>
 </head>
 <body>
 
