--- a/bands.html
+++ b/bands.html
@@ -491,7 +491,7 @@
 				</figure>
 			</a>	
 		</div>
-		<!-- <div class="contenedor_tarjeta">
+		<div class="contenedor_tarjeta">
 			<a href="therasmus/therasmus.html">
 				<figure>
 					<img src="img/therasmus/therasmus1.jpg" class="frontal" alt="">
@@ -502,7 +502,7 @@
 						</figcaption>
 				</figure>
 			</a>	
-		</div> -->
+		</div>
 		<div class="contenedor_tarjeta">
 			<a href="tierrasanta/tierrasanta.html">
 				<figure>
