--- a/therasmus/playboy.html
+++ b/therasmus/playboy.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Play Boys</h2>
       <p>Año: 1997</p>
-      <a href="" target="_bank">Descargar</a>
+      <a href="https://download1483.mediafire.com/07ks1q35mecg/wc7x9e88rklcwmz/Playboy.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
