--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
 			</div>
 		</figure>
 		<figure>
-			<img src="img/avengedsevenfold/2007avengedsevenfold.jpg" alt="">
+			<img src="img/therasmus/2003deadletters.jpg" alt="">
 			<div class="capa">
-				<h3>Avenged Sevenfold</h3>
-				<p>Avenged Sevenfold</p> <br>
-				<a href="avengedsevenfold/avengedsevenfold.html">Ir Al Álbum</a>
+				<h3>The Rasmus</h3>
+				<p>Dead Letters</p> <br>
+				<a href="therasmus/deadletters.html">Ir Al Álbum</a>
 			</div>
 		</figure>
 		<figure>
-			<img src="img/muse/2009theresistance.jpg" alt="">
+			<img src="img/thebeatles/1969abbeyroad.jpg" alt="">
 			<div class="capa">
-				<h3>Muse</h3>
-				<p>The Resistance</p> <br>
-				<a href="muse/theresistence.html">Ir Al Álbum</a>
+				<h3>The Beatles</h3>
+				<p>Abbey Road</p> <br>
+				<a href="thebeatles/abbeyroad.html">Ir Al Álbum</a>
 			</div>
 		</figure>
 	</div>
