--- a/acdc/flyonthewall.html
+++ b/acdc/flyonthewall.html
@@ -19,7 +19,7 @@
 <body>
 
   <section>
-    <img src="../img/acdc/flyonthewall.jpg" class="win">
+    <img src="../img/acdc/flyonthewall.jpg" class="win" title="Fly On The Wall 1985">
     <header>
       <a href="../index.html" class="logo">SOD</a>
       <ul class="navigation">
