--- a/archenemy/albumsarchenemy.html
+++ b/archenemy/albumsarchenemy.html
@@ -70,7 +70,7 @@
 						<figcaption class="trasera">
 							<h2 class="titulo">Arch Enemy</h2>
 							<hr>
-							<p>Doomsday <br><br>Machine<br><br> <br><br>2005</p>
+							<p>Doomsday <br><br>Machine<br><br>2005</p>
 						</figcaption>
 				</figure>
 			</a>	
@@ -82,7 +82,7 @@
 						<figcaption class="trasera">
 							<h2 class="titulo">Arch Enemy</h2>
 							<hr>
-							<p>Khaos <br><br>Legions <br><br> <br><br>2011</p>
+							<p>Khaos <br><br>Legions<br><br>2011</p>
 						</figcaption>
 				</figure>
 			</a>	
