--- a/bands.html
+++ b/bands.html
@@ -39,12 +39,12 @@
 		<h1>Bandas</h1>
 	</div>
 
-	<!-- <div class="caja">
-		<div class="caja_chica">
-			<span class="icon"><i class="fa fa-search" aria-hidden="true"></i></span>
-				<input type="search" id="search" placeholder="Buscar">
-		</div>
-	</div> -->
+<!-- <div class="caja">
+	<div class="mini_caja">
+		<input type="search" id="search" placeholder="Buscar">
+		<button type="submit" id="buscar">Buscar</button>
+	</div>
+</div> -->
 	
 	<section class="contenedor">
 
