--- a/bands.html
+++ b/bands.html
@@ -388,7 +388,7 @@
 				<figure>
 					<img src="img/muse/muse1.jpg" class="frontal" alt="">
 						<figcaption class="trasera">
-							<h2 class="titulo">MUSE</h2>
+							<h2 class="titulo">Muse</h2>
 							<hr>
 							<p>Muse es una banda británica de rock alternativo formada en 1994 en Inglaterra. Desde su formación en la década de los 90, sus integrantes son: Matt Bellamy; Dominic Howard; y Christopher Wolstenholme.​​</p>
 						</figcaption>
@@ -448,7 +448,7 @@
 				<figure>
 					<img src="img/septicflesh/septicflesh.jpg" class="frontal" alt="">
 						<figcaption class="trasera">
-							<h2 class="titulo">Septic Flesh</h2>
+							<h2 class="titulo">Septicflesh</h2>
 							<hr>
 							<p>Septicflesh es una banda griega de Death Metal Sinfónico con influencias de Doom Metal y Metal Gótico procedente de Atenas, Ática, fundada en 1990.​</p>
 						</figcaption>
@@ -511,6 +511,18 @@
 							<h2 class="titulo">Tierra Santa</h2>
 							<hr>
 							<p>Tierra Santa es un grupo musical español de heavy metal y power metal épico de La Rioja, España.</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
+			<a href="machinehead/machinehead.html">
+				<figure>
+					<img src="img/machinehead/machineheadband.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">Machine Head</h2>
+							<hr>
+							<p>Machine Head es una banda estadounidense de groove metal formada el 12 de octubre de 1991 en Oakland, Estado de California por Robb Flynn y Adam Duce.</p>
 						</figcaption>
 				</figure>
 			</a>	
