--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 			</div>
 		</figure>
 		<figure>
-			<img src="img/tierrasanta/minombreseraleyenda2013.jpg" alt="">
+			<img src="img/machinehead/throughthesshesofempires2003.jpg" alt="">
 			<div class="capa">
-				<h3>Tierra Santa</h3>
-				<p>Mi Nombre Séra Leyenda</p> <br>
-				<a href="tierrasanta/minombreseraleyenda.html">Ir Al Álbum</a>
+				<h3>Machine Head</h3>
+				<p>Through the Shes of Empires</p> <br>
+				<a href="machinehead/throughtheshesofempires.html">Ir Al Álbum</a>
 			</div>
 		</figure>
 	</div>
