--- a/machinehead/themorethingschange.html
+++ b/machinehead/themorethingschange.html
@@ -4,8 +4,8 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="icon" href="../img/cradleoffilth/logocradleoffilth.png" type="image/png">
-     <link rel="stylesheet" href="cradleoffilth.css">
+     <link rel="icon" href="../img/machinehead/themorethingschange1997.jpg" type="image/png">
+     <link rel="stylesheet" href="themorethingschange.css">
 
      <!-- icons -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,13 +14,12 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
 
-
-     <title>Cradle Of Filth</title>
+     <title>Machine Head</title>
 </head>
 <body>
 
   <section>
-    <!-- <img src="../img/cradleoffilth/cradle1.jpg" class="win"> -->
+    <img src="../img/machinehead/themorethingschange1997.jpg" class="win">
     <header>
       <a href="../index.html" class="logo">SOD</a>
       <ul class="navigation">
@@ -34,10 +33,9 @@
 
     <div class="content">
       <div class="textBox">
-      <h2>Cradle Of Filth</h2>
-      <p>Año: 1991<br> País: Inglaterra<br>Integrantes: <br> Dani Filth (Vocalista), <br> Lindsay Schoolcraft (Teclado), <br> Martin Skaroupka (Bateria), <br> Richard Shaw (Guitarra), <br> Daniel Firth (Bajo).</p>
-      <a href="albumscradleoffilth.html">Álbums</a>
-      <a href="concierto.html">Concierto</a>
+      <h2>The More Things Change...</h2>
+      <p>Año: 1997</p>
+      <a href="https://download947.mediafire.com/gyisltnbzo4g/h4iue620dwja7n2/The+More+Things+Change.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
